public/css/styles.css
div.container {
	position: relative;
	left: 0px;
	top: 0px;
	width: 100%;
	height: 100%;
	background-color: white;
}

div.home_title, div.create_account_title, div.login_title, div.create_review_title, div.schools_title, div.professors_title {
	position: absolute;
	top: 100px;
	left: 100px;
	right: 100px;
	height: 200px;
	text-align: center;
}

div.user_profile_photo {
	position: absolute;
	width: 150px;
	height: 150px;
	top: 55px;
	left: 120px;
}

div.user_profile_title {
	position: absolute;
	top: 100px;
	left: 100px;
	right: 100px;
	height: 200px;
	text-align: center;
}

div.user_profile_bio {
	position: absolute;
	top: 250px;
	left: 100px;
	right: 100px;
}

div.user_profile_reviews {
	position: absolute;
	top: 350px;
	left: 300px;
}

div.home_search_container {
	position: absolute;
	top: 400px;
	left: 100px;
	right: 100px;
	height: 100px;
}

div.home_search_prof {
	position: absolute;
	float: left;
	left: 10%;
	width: 30%;
	height: 100px;
}

div.home_search_school {
	position: absolute;
	float: right;
	right: 10%;
	width: 30%;
	height: 100px;
}

div.home_review {
	position: absolute;
	top: 600px;
	left: 400px;
	right: 400px;
	height: 100px;
	text-align: center;
}

div.home_misc {
	position: absolute;
	top: 750px;
	left: 50px;
	right: 50px;
	height: 150px;
}

div.account {
	position: absolute;
	top: 0px;
	right: 0px;
	width: 300px;
	height: 100px;
}

h1.home_title, h1.create_account_title, h1.login_title, h1.create_review_title, h1.user_profile_title, h1.reviews_page_title, h1.schools_title, h1.professors_title {
	font-family: Helvetica;
	font-size: 70px;
	color: black;
}

div.create_account_form, div.login_form, div.create_review_form {
	position: absolute;
	top: 300px;
	height: 300px;
	width: 500px;
	left: calc(50% - 250px);
	text-align: left;
}

div.centered_search {
	position: absolute;
	top:300px;
	left: 100px;
	right: 100px;
	text-align: center;
	height: 200px;
}

div.search_results {
	position: absolute;
	top: 400px;
	left: 100px;
	right: 100px;
	text-align: center;   
	height: 300px;
}

div.create_account_misc, div.create_review_misc, div.login_misc, div.user_profile_misc, div.reviews_page_misc, div.schools_misc, div.professors_misc {
	position: absolute;
	left: 50px;
	right: 50px;
	top: 600px;
	height: 300px;
	z-index: -1;
}

div.reviews_page_container {
	position: absolute;
	top: 35px;
	width: 800px;
	height: 200px;
	left: calc(50% - 400px);
}

div.reviews_page_tiles {
	position: absolute;
	top: 250px;
	left: calc(50% - 320px);
	width: 641px;
	height: 650px;
	overflow:hidden;
	overflow-y: auto;
	border-style: solid;
	border-width: 2px 0px 2px 0px;
	border-color: black;
}

div.home_link {
	position: absolute;
	left: 25px;
	top: 25px;
}

.normal_text {
	font-family: Helvetica;
	font-size: 20px;
	color: black;
}

table {
	position: relative;
	border: solid;
	margin-left: auto;
	margin-right: auto;
}

table, td, tr, th {
	border: solid;
}

div.review_tile {
	position: relative;
	width: 600px;
	height: 200px;
	padding: 10px;
	border-style: solid;
	border-width: 0px 2px 2px 2px;
	border-color: black;
}

div.review_image {
	float: left;
	width: 100px;
	height: 200px;
}

div.review_header {
	float: left;
	width: 500px;
	height: 50px;
	padding: 10px;
	box-sizing: border-box;
}

div.review_body {
	float: left;
	width: 500px;
	height: 150px;
	padding: 10px;
	box-sizing: border-box;
}

img.review_image {
	width: 100px;
	height: 100px;
}

a.review_name, a.professortile_title, a.schooltile_title {
	font-family: Helvetica;
	font-size: 30px;
	color: black;
}

a.review_rating {
	font-family: Helvetica;
	font-size: 30px;
	color: black;
	float: right;
}

div.professortile_container, div.schooltile_container {
	position: relative;
	width: 100%;
	height: 100%;
	padding: 8px;
	box-sizing: border-box;
	border-style: solid;
	border-width: 2px;
	border-color: black;
}

div.professortile_image, div.schooltile_image {
	float: left;
	width: 180px;
	height: 100%;
}

img.professortile_image, img.schooltile_image {
	width: 180px;
	height: 180px;
}

div.professortile_title, div.schooltile_title {
	float: left;
	width: 600px;
	height: 50px;
	padding: 10px;
	box-sizing: border-box;
}

div.professortile_body, div.schooltile_body {
	float: left;
	width: 600px;
	height: 130px;
	padding: 10px;
	box-sizing: border-box;
}

input.create_review_textbox {
	width: 300px;
}

button.create_review_star_button {
	background: none;
	border: none;
	font-family: Helvetica;
	font-size: 50px;
}

textarea.create_review_justification {
	width: 500px;
	font-family: Helvetica;
	font-size: 12px;
}

button.submit_review {
	width: 300px;
	height: 50px;
	font-family: Helvetica;
	font-size: 30px;
	margin-left: 100px;
}

textarea.edit_review_text {
	width: 100%;
	height: 100%;
	resize: none;
	font-family: Helvetica;
	font-size: 20px;
}

